--- a/index.html
+++ b/index.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-  <title>Twitter</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+	<meta charset="utf-8">
+	<title>Twitter</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<header class="container-fluid">
-<div class="row">
-  <div class="col-xs-12 col-md-12 text-center">
-    <h1> TODO APP</h1>
-  </div>
-</div>
-<section class="container-fluid">
-<div class="row">
-  <div class="col-xs-12 col-md-5 text-center">
-    <textarea rows="10"></textarea>
-   <div class="row">
-     <div class="col-xs-12">
-       <button type="button" class="btn btn-primary btn-lg">Large button</button>
-     </div>
-   </div>
+	<header class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-12 text-center cabecera">
+				<h1> TODO APP</h1>
+			</div>
+		</div>
+		<section class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 text-center">
+					<textarea name="texto" id="cajatexto" cols="30" rows="10"></textarea>
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 text-left">
+							<button type="button" class="btn btn-default btn-lg agregar">
+							<span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span> Agrega una tarea
+							</button>
+						</div>
+					</div>
 
-  </div>
-</div>
-</section>
+				</div>
+			</div>
+		</section>
+		<hr>
+		<section class="container-fluid">
+			<div class="row">
 
 
-  
+
+
+			</div>
+
+
+		</section>
 
 
 
-</header>
 
-  <script src="js/main.js"></script>
+
+
+	</header>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
